RS: fix box image on mobile

--- a/wp-content/themes/riseandshine/assets/scss/base/_helpers.scss
+++ b/wp-content/themes/riseandshine/assets/scss/base/_helpers.scss
@@ -193,13 +193,13 @@
 
 .hidden-on-mobile-tablet {
   @media only screen and (max-width: 1023px) {
-    display: none;
+    display: none !important;
   }
 }
 
 .hidden-on-mobile {
   @media only screen and (max-width: 767px) {
-    display: none;
+    display: none !important;
   }
 }
 
