--- a/wp-content/themes/riseandshine/assets/scss/components/_banner.scss
+++ b/wp-content/themes/riseandshine/assets/scss/components/_banner.scss
@@ -30,6 +30,13 @@
       height: 100% !important;
     }
 
+    > span,
+    > a {
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+    }
+
     a:before {
       position: absolute;
       top: 0;
