--- a/wp-content/themes/riseandshine/assets/scss/components/_grid-image.scss
+++ b/wp-content/themes/riseandshine/assets/scss/components/_grid-image.scss
@@ -65,18 +65,6 @@
     z-index: 1;
     overflow: hidden;
 
-    &:before {
-      position: absolute;
-      content: '';
-      background: url('../images/dark-overlay.png') no-repeat scroll 0 0 transparent;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      opacity: .4;
-      background-size: 100% 100%;
-    }
-
     img {
       min-height: 173px;
       height: auto;
@@ -100,12 +88,24 @@
     @media only screen and (min-width: 768px) {
       padding: 14px 19px;
     }
+
+    &:before {
+      position: absolute;
+      content: '';
+      background: url('../images/dark-overlay.png') no-repeat scroll 0 0 transparent;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      opacity: .4;
+      background-size: 100% 100%;
+    }
   }
 
   &__body {
     display: none;
     font-size: 14px;
-    line-height: 1;
+    line-height: 1.2;
     color: $white;
 
     @media only screen and (min-width: 768px) and (max-width: 1023px) {
@@ -124,7 +124,7 @@
     }
 
     @media only screen and (min-width: 1024px) {
-      margin-top: 26px;
+      margin-top: 35px;
       max-height: inherit;
     }
 
